--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 //Описание задачи
 //Дано: две сопряженные стороны четырехугольника
 //Найти: Площадь и периметр
+//Пишу тектс, чтобы сделать скриншот...о том, что я внес изменения и хочу их зафиксировать...
